--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,94 @@ then -Dlog4j.configuration=log4j.xml should be
 setup to run configuration. -->
 
 	<profiles>
+
+		<profile>
+			<id>commit</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.18.1</version>
+						<configuration>
+							<includes>
+								<include>**/MinizincBasedTestUpTo5Seconds.java</include>
+								<include>**/MinizincBasedTestUpTo30Seconds.java</include>
+							</includes>
+							<excludes>
+								<exclude>**/MinizincBasedTestUpTo1Minutes.java</exclude>
+								<exclude>**/MinizincBasedTest.java</exclude>
+								<exclude>**/MinizincBasedTestAbove1Hours.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo1Hours.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo10Minutes.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo5Minutes.java</exclude>
+								<exclude>**/MinizincBasedChosen.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.18.1</version>
+						<configuration>
+							<includes>
+								<include>**/MinizincBasedTestUpTo5Seconds.java</include>
+								<include>**/MinizincBasedTestUpTo30Seconds.java</include>
+								<include>**/MinizincBasedTestUpTo1Minutes.java</include>
+								<include>**/MinizincBasedTestUpTo1Hours.java</include>
+								<include>**/MinizincBasedTestUpTo10Minutes.java</include>
+								<include>**/MinizincBasedTestUpTo5Minutes.java</include>
+							</includes>
+							<excludes>
+								<exclude>**/MinizincBasedTest.java</exclude>
+								<exclude>**/MinizincBasedTestAbove1Hours.java</exclude>
+								<exclude>**/MinizincBasedChosen.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>push</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.18.1</version>
+						<configuration>
+							<includes>
+								<include>**/MinizincBasedTestUpTo5Seconds.java</include>
+								<include>**/MinizincBasedTestUpTo30Seconds.java</include>
+								<include>**/MinizincBasedTestUpTo1Minutes.java</include>
+								<include>**/MinizincBasedTestUpTo5Minutes.java</include>
+							</includes>
+							<excludes>
+								<exclude>**/MinizincBasedTest.java</exclude>
+								<exclude>**/MinizincBasedTestAbove1Hours.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo1Hours.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo10Minutes.java</exclude>
+								<exclude>**/MinizincBasedChosen.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+
+
 		<profile>
 			<id>logging</id>
 			<build>
@@ -309,7 +397,23 @@ setup to run configuration. -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
+				<configuration>
+					<includes>
+					</includes>
+					<excludes>
+						<exclude>**/MinizincBasedTestUpTo5Seconds.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo30Seconds.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo1Minutes.java</exclude>
+						<exclude>**/MinizincBasedTest.java</exclude>
+						<exclude>**/MinizincBasedTestAbove1Hours.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo1Hours.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo10Minutes.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo5Minutes.java</exclude>
+						<exclude>**/MinizincBasedChosen.java</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
+
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
