--- a/pom.xml
+++ b/pom.xml
@@ -495,7 +495,7 @@ setup to run configuration. -->
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.18.1</version>
 			</plugin>
-			<plugin>
+<!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.17</version>
@@ -509,8 +509,7 @@ setup to run configuration. -->
 				<configuration>
 					<configLocation>doc/checkstyle.xml</configLocation>
 				</configuration>
-			</plugin>
-
+			</plugin>-->
         </plugins>
     </reporting>
 
