--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,12 @@ setup to run configuration. -->
 					</configuration>
 				</plugin>
 
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>2.9</version>
+				</plugin>
+
 			</plugins>
 		</pluginManagement>
 
@@ -480,7 +486,11 @@ setup to run configuration. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.5</version>
+				<configuration>
+					<linkXRef>true</linkXRef>
+					<targetJdk>1.7</targetJdk>
+				</configuration>
+				<version>3.7</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
