--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<aspectj.version>1.8.9</aspectj.version>
 		<checkstyle.config.location>resources/checkstyle.xml</checkstyle.config.location>
 	</properties>
@@ -93,6 +93,7 @@ setup to run configuration. -->
 						<version>2.18.1</version>
 						<configuration>
 							<includes>
+								<include>**/ExampleBasedTest.java</include>
 								<include>**/MinizincBasedTestUpTo5Seconds.java</include>
 								<include>**/MinizincBasedTestUpTo30Seconds.java</include>
 							</includes>
@@ -122,6 +123,7 @@ setup to run configuration. -->
 						<version>2.18.1</version>
 						<configuration>
 							<includes>
+								<include>**/ExampleBasedTest.java</include>
 								<include>**/MinizincBasedTestUpTo5Seconds.java</include>
 								<include>**/MinizincBasedTestUpTo30Seconds.java</include>
 								<include>**/MinizincBasedTestUpTo1Minutes.java</include>
@@ -150,6 +152,7 @@ setup to run configuration. -->
 						<version>2.18.1</version>
 						<configuration>
 							<includes>
+								<include>**/ExampleBasedTest.java</include>
 								<include>**/MinizincBasedTestUpTo5Seconds.java</include>
 								<include>**/MinizincBasedTestUpTo30Seconds.java</include>
 								<include>**/MinizincBasedTestUpTo1Minutes.java</include>
@@ -236,7 +239,7 @@ setup to run configuration. -->
 				<plugin>
 				  <groupId>org.apache.maven.plugins</groupId>
 				  <artifactId>maven-compiler-plugin</artifactId>
-				  <version>3.3</version>
+				  <version>3.6.1</version>
 				</plugin>
 
 				<plugin>
@@ -283,10 +286,10 @@ setup to run configuration. -->
 		  <plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-compiler-plugin</artifactId>
-		    <version>3.3</version>
+		    <version>3.6.1</version>
 		    <configuration>
-		      <source>1.7</source>
-		      <target>1.7</target>
+		      <source>1.8</source>
+		      <target>1.8</target>
 		      <compilerArgument>-Xlint:all</compilerArgument>
 		      <!-- <showWarnings>true</showWarnings>
 			   <showDeprecation>true</showDeprecation>  -->
@@ -361,7 +364,7 @@ setup to run configuration. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.4</version>  <!-- TODO try updating to 3.0.1 -->
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -379,7 +382,7 @@ setup to run configuration. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.5</version> <!-- TODO try updating to 3.0.2 -->
 				<configuration>
 					<archive>
 						<manifest>
@@ -398,7 +401,7 @@ setup to run configuration. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
+				<version>2.10.3</version> <!-- TODO try updating to 2.10.4 -->
 
 				<configuration>
 				  <!--- Possible solution to not print any warrnings for Java 1.8
@@ -432,7 +435,7 @@ setup to run configuration. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>2.18.1</version>  <!-- TODO try updating to 2.19.1 -->
 				<configuration>
 					<excludes>
 						<exclude>**/MinizincBasedTest.java</exclude>
@@ -457,7 +460,7 @@ setup to run configuration. -->
 
 			<groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.7.7.201606060606</version>
+            <version>0.7.7.201606060606</version>  <!-- TODO try updating to 0.7.9 -->
 				<configuration>
 					<excludes>
 						<exclude>org/jacop/examples/scala/**/*.class</exclude>
@@ -515,7 +518,7 @@ setup to run configuration. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.1</version>
+				<version>2.10.1</version>  <!-- TODO try updating to 2.10.4 -->
 				<configuration>
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
@@ -523,7 +526,7 @@ setup to run configuration. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>2.18.1</version> <!-- TODO try updating to 2.19.1 -->
 			</plugin>
 <!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -540,6 +543,19 @@ setup to run configuration. -->
 					<configLocation>doc/checkstyle.xml</configLocation>
 				</configuration>
 			</plugin>-->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.7.201606060606</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<!-- select non-aggregate reports -->
+							<report>report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
         </plugins>
     </reporting>
 
@@ -560,7 +576,8 @@ setup to run configuration. -->
 			<artifactId>scala-compiler</artifactId>
 			<version>2.12.0</version>
 		</dependency>
-		
+
+		<!-- TODO Clean up dependencies, as some may not be needed any more. -->
 		<!--  -->
 		<dependency>
             <groupId>org.perf4j</groupId>
