--- a/pom.xml
+++ b/pom.xml
@@ -533,5 +533,11 @@ setup to run configuration. -->
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.6.2</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
