--- a/pom.xml
+++ b/pom.xml
@@ -250,20 +250,7 @@ setup to run configuration. -->
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>2.9</version>
 				</plugin>
-
-
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>findbugs-maven-plugin</artifactId>
-					<version>3.0.4</version>
-					<configuration>
-						<!-- elements like effort and threshold will be ignored if put here -->
-						<excludeFilterFile>doc/findbugs-exclude.xml</excludeFilterFile>
-						<includeFilterFile>doc/findbugs-include.xml</includeFilterFile>
-					</configuration>
-				</plugin>
-
-
+				
 			</plugins>
 		</pluginManagement>
 
@@ -485,11 +472,13 @@ setup to run configuration. -->
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>3.0.4</version>
-				<!-- DO NOT put any additional configuration element here. If you it will stop working.
-				 Use pluginManagement section. -->
+				<!-- Put any additional configuration element here. It is working.
+				 Do not need to use pluginManagement section, where it does not work. -->
 				<configuration>
 					<effort>Max</effort>      <!-- Other working value is Min -->
 					<threshold>Medium</threshold>  <!-- Other working value is Low, High -->
+					<excludeFilterFile>doc/findbugs-exclude.xml</excludeFilterFile>
+					<includeFilterFile>doc/findbugs-include.xml</includeFilterFile>
 				</configuration>
 
 			</plugin>
