--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,37 @@ setup to run configuration. -->
 	<profiles>
 
 		<profile>
+			<id>min</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.19.1</version>
+						<configuration>
+							<includes>
+								<include>**/MinizincBasedTestUpTo5Seconds.java</include>
+							</includes>
+							<excludes>
+								<include>**/ExampleBasedTest.java</include>
+
+								<include>**/MinizincBasedTestUpTo30Seconds.java</include>
+								<exclude>**/MinizincBasedTestUpTo1Minutes.java</exclude>
+								<exclude>**/MinizincBasedTest.java</exclude>
+								<exclude>**/MinizincBasedTestAbove1Hours.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo1Hours.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo10Minutes.java</exclude>
+								<exclude>**/MinizincBasedTestUpTo5Minutes.java</exclude>
+								<exclude>**/MinizincBasedChosen.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
 			<id>commit</id>
 			<build>
 				<plugins>
