--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<aspectj.version>1.8.9</aspectj.version>
+		<aspectj.version>1.8.10</aspectj.version>
 		<checkstyle.config.location>resources/checkstyle.xml</checkstyle.config.location>
 	</properties>
 
@@ -562,6 +562,9 @@ setup to run configuration. -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.19.1</version>
+				<configuration>
+					<enableAssertions>true</enableAssertions>
+				</configuration>
 			</plugin>
 <!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
