Improving README and changing tests run in mvn clean install
Former-commit-id: 15319cbd81eee3dcc6107d4fc2691d2312f83127 [formerly 9f9ce182edc44c57e4b6893907f00d9376408635]

Former-commit-id: 0ffdaaa5aeba55614d90447b041091b621443d42

--- a/pom.xml
+++ b/pom.xml
@@ -487,11 +487,19 @@ setup to run configuration. -->
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
+					<includes>
+						<include>**/IntDomainTest.java</include>
+						<include>**/ExampleBasedTest.java</include>
+						<include>**/SingleConstraintTest.java</include>
+					</includes>
 					<excludes>
-						<exclude>**/MinizincBasedTestAbove1Hours.java</exclude>
-						<exclude>**/MinizincBasedTestUpTo1Hours.java</exclude>
-						<exclude>**/MinizincBasedTestUpTo10Minutes.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo5Seconds.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo30Seconds.java</exclude>
+						<exclude>**/MinizincBasedTestUpTo1Minutes.java</exclude>
 						<exclude>**/MinizincBasedTestUpTo5Minutes.java</exclude>
+						<include>**/MinizincBasedTestUpTo10Minutes.java</include>
+						<exclude>**/MinizincBasedTestUpTo1Hours.java</exclude>
+						<exclude>**/MinizincBasedTestAbove1Hours.java</exclude>
 						<exclude>**/MinizincBasedChosen.java</exclude>
 					</excludes>
 				</configuration>
