--- a/pom.xml
+++ b/pom.xml
@@ -662,13 +662,18 @@ setup to run configuration. -->
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.12.7</version>
+            <version>2.12.6</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.12.7</version>
+            <version>2.12.6</version>
         </dependency>
+	<dependency>
+	  <groupId>org.scala-lang.modules</groupId>
+	  <artifactId>scala-xml_2.12</artifactId>
+	  <version>1.1.1</version>
+	</dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
