--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jacop</groupId>
     <artifactId>jacop</artifactId>
-    <version>4.8.0</version>
+    <version>4.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JaCoP</name>
