1. Improving generation of regular constraint in flatzinc. it generates intervals, if possible, to label transitions instead of numbers. 2. Making LexOrder propagation "more incremental" by executing initialization only the first time. 3. Performance improvement of ValueProcede.

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <aspectj.version>1.8.10</aspectj.version>
         <checkstyle.config.location>resources/checkstyle.xml</checkstyle.config.location>
+        <dependency.locations.enabled>false</dependency.locations.enabled>
     </properties>
 
     <!-- In order to see logging output,
@@ -612,14 +613,6 @@ setup to run configuration. -->
 
     <reporting>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
