--- a/pom.xml
+++ b/pom.xml
@@ -377,9 +377,9 @@ setup to run configuration. -->
 
             <!-- Scala plugin -->
             <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.2</version>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>4.8.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -715,12 +715,12 @@ setup to run configuration. -->
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.13.9</version>
+            <version>2.13.10</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.13.9</version>
+            <version>2.13.10</version>
         </dependency>
 	<!--
 	<dependency>
