Code cleaning; mostly types.

--- a/pom.xml
+++ b/pom.xml
@@ -371,8 +371,8 @@ setup to run configuration. -->
                     <source>1.8</source>
                     <target>1.8</target>
                     <compilerArgument>-Xlint:all</compilerArgument>
-                    <!-- <showWarnings>true</showWarnings>
-                     <showDeprecation>true</showDeprecation>  -->
+                    <showWarnings>false</showWarnings>
+                    <!--  <showDeprecation>true</showDeprecation>  -->
                 </configuration>
             </plugin>
 
