--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jacop</groupId>
     <artifactId>jacop</artifactId>
-    <version>4.10.0</version>
+    <version>4.11.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JaCoP</name>
